--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       type="module"
       src="https://cdn.jsdelivr.net/npm/three@0.121.1/examples/jsm/controls/OrbitControls.js"
     ></script>
-    <!-- <script src="script.js"></script> -->
+    <script src="./script.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
 
